half of pieces are corrupted in write

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+*.a
+*.lo
+*.o
 /.depend
 /REVISION
 Transmission.xcodeproj/*.mode*
@@ -24,3 +27,21 @@ macosx/en.lproj/*~.nib
 po/*.mo
 /release
 third-party/miniupnp/miniupnpcstrings.h
+Makefile
+*.gmo
+*.pri
+test-driver
+.deps
+ltmain.sh
+*-test
+a.out
+html
+TAGS
+*.pb
+*~
+configure
+*.in
+depcomp
+missing
+*.log
+*.trs
