fail pieces early, yield instead of sleep in verification

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,20 @@ macosx/en.lproj/*~.nib
 po/*.mo
 /release
 third-party/miniupnp/miniupnpcstrings.h
+*.o
+*.in
+Makefile
+ltmain.sh
+/latex
+/html
+libtool
+config.sub
+/configure
+config.log
+config.guess
+config.status
+*~
+Doxyfile
+po/POTFILES
+.deps
+aclocal.m4
