--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,13 @@ macosx/en.lproj/*~.nib
 po/*.mo
 /release
 third-party/miniupnp/miniupnpcstrings.h
+*.a
+*.o
+TAGS
+*~
+*.in
+/html
+/latex
+.deps
+Doxyfile
+Makefile
